--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^4.0.0
   image_picker: ^0.6.2+3
+  path_provider: ^1.5.1
 
 dev_dependencies:
   flutter_test:
