--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^0.6.2+3
   path_provider: ^1.5.1
   sqflite: ^1.2.0
+  location: ^2.3.5
 
 dev_dependencies:
   flutter_test:
