--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^1.5.1
   sqflite: ^1.2.0
   location: ^2.3.5
+  firebase_storage: ^3.1.1
 
 dev_dependencies:
   flutter_test:
